Final spelling and grammar check

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -14,7 +14,7 @@
 \newacronym{wmo}{WMO}{World Meteorological Organization}
 \newacronym{pws}{PWS}{private weather station}
 \newacronym{cws}{CWS}{citizen weather station}
-\newacronym{qc}{QC}{quality control}
+\newacronym{qc}{QC}{Quality Control}
 \newacronym{eumetnet}{EUMETNET}{European Meteorological Network}
 \newacronym{ml}{ML}{machine learning}
 \newacronym{pbl}{PBL}{planetary boundary layer}
