--- a/chapter1.tex
+++ b/chapter1.tex
@@ -14,10 +14,10 @@ While these different approaches offer different advantages and disadvantages of
 
 \section{Objective}
 
-The main objective for this work is to explore the feasibility of the usage of \gls{ml} models for \gls{ta} interpolation in local urban environments. As part of this exploration, two main use-cases are discussed, namely \gls{ta} interpolation for a single station, and areal interpolation for a wider urban environment. The main idea of \gls{ta} interpolation for a single location is to train a \gls{ml} model for that specific location and capture the relationship to surrounding neighbour sensors, which can then be used to either impute missing values for a sensor if that sensor is offline, or if there is no stationary sensor for that specific location to begin with, e.g., a non-stationary sensor that moves through the urban city, to impute values while no moving sensor is currently in the area. Especially the moving sensor case could be interesting, as this could be a solution to improving the limited spatial coverage of a sensor network.\\
+The main objective for this work is to explore the feasibility of the usage of \gls{ml} models for \gls{ta} interpolation in local urban environments. As part of this exploration, two main use cases are discussed, namely \gls{ta} interpolation for a single station, and areal interpolation for a wider urban environment. The main idea of \gls{ta} interpolation for a single location is to train a \gls{ml} model for that specific location and capture the relationship to surrounding neighbour sensors, which can then be used to either impute missing values for a sensor if that sensor is offline, or if there is no stationary sensor for that specific location to begin with, e.g., a non-stationary sensor that moves through the urban city, to impute values while no moving sensor is currently in the area. Especially the moving sensor case could be interesting, as this could be a solution to improving the limited spatial coverage of a sensor network.\\
 Next, areal interpolation of \gls{ta} is important as many research related activities commonly rely on continuous or gridded data fields in order to do analysis, and interpolation is a way of turning sensor readings at discrete locations into a gridded \gls{ta} map. The main challenge of this approach is that there are no sensors in every location, making it hard to train supervised \gls{ml} models and validate interpolation results. For this approach, commonly collected weather information, such as temperature, humidity, rain, pressure, and wind, are used in conjunction with remote sensing features such as vegetation indexes~\cite{alonso2020new}, that can indicate similarities between the environments in which the individual sensors are placed.\\
 Next to discussing the individual technical capabilities of \gls{ml} models, data plays an important role of when training, testing, and operating \gls{ml} models. To collect urban weather data, different \gls{pws} providers are compared, and data collected from Netatmo and Sensor.Community. Data pre-processing steps as well as \gls{qc} is discussed to guarantee good data quality and reliable evaluation results. Additionally, feature engineering steps are discussed to capture additional information such as location, time, and more.\\
-After exploring available \gls{ml} models and collecting data for training and testing, the last goal is to do an evaluation of the different \gls{ml} models for both use-cases to determine the feasibility and identify prediction quality and rank model performances by assessing root mean squared error (\gls{rmse}) and \gls{r2} scores.
+After exploring available \gls{ml} models and collecting data for training and testing, the last goal is to do an evaluation of the different \gls{ml} models for both use cases to determine the feasibility and identify prediction quality and rank model performances by assessing root mean squared error (\gls{rmse}) and \gls{r2} scores.
 
 \section{Structure of this work}
 
