--- a/chapter2.tex
+++ b/chapter2.tex
@@ -57,7 +57,7 @@ Compared to \gls{lst}, \gls{ta} is measured in situ via weather station networks
 
 \subsubsection{Shared UHI Challenges}
 
-Some shared challenges for all types of \gls{uhi} include: 1. Define what \textit{urban} means in the context of \gls{uhi}s~\cite{stewart2009newly}. The term urban is widely used to identify areas that are more densly populated than the surrounding rural areas. Having this distinction between urban and rural~\cite{lowry1977empirical} helped researchers to better define the \gls{uhi} magnitude, but this simple distinction also leads to problems~\cite{stewart2011systematic}. The problem lies in the fact that there is no clear border between urban and rural areas, but a fluent transition. Especially for larger metropolitan areas, like Tokyo, the urban area could span 10s to 100s of kilometres, making the collection of reference rural temperatures hard. The reference rural temperature has a direct influence on the \gls{uhi} magnitude, which is `the most widely recognized indicator of city climate modification in the environmental sciences'~\cite{stewart2009newly}. As a solution, different classification into \gls{lcz}s were proposed~\cite{stewart2012local, stewart2009newly}, that classify areas based on surface roughness, building densities, building heights etc. 2. Measuring the influence of other local urban or meteorological phenomena on the temperatures collected. The urban climate is extremely complex, due to many different influences, such as anthropological energy, heat dissipated from ACs, vehicles, and more. Additionally, the urban climate is also influenced by surrounding regional/meso-scale climate phenomena such as storms, valleys, mountains, large waterbodies, coastlines, and more. In Section~\ref{sec:feature_engineering}, we talk about potential features to capture the local urban climate.
+Some shared challenges for all types of \gls{uhi} include: 1. Define what \textit{urban} means in the context of \gls{uhi}s~\cite{stewart2009newly}. The term urban is widely used to identify areas that are more densely populated than the surrounding rural areas. Having this distinction between urban and rural~\cite{lowry1977empirical} helped researchers to better define the \gls{uhi} magnitude, but this simple distinction also leads to problems~\cite{stewart2011systematic}. The problem lies in the fact that there is no clear border between urban and rural areas, but a fluent transition. Especially for larger metropolitan areas, like Tokyo, the urban area could span 10s to 100s of kilometres, making the collection of reference rural temperatures hard. The reference rural temperature has a direct influence on the \gls{uhi} magnitude, which is `the most widely recognized indicator of city climate modification in the environmental sciences'~\cite{stewart2009newly}. As a solution, different classification into \gls{lcz}s were proposed~\cite{stewart2012local, stewart2009newly}, that classify areas based on surface roughness, building densities, building heights etc. 2. Measuring the influence of other local urban or meteorological phenomena on the temperatures collected. The urban climate is extremely complex, due to many different influences, such as anthropological energy, heat dissipated from ACs, vehicles, and more. Additionally, the urban climate is also influenced by surrounding regional/meso-scale climate phenomena such as storms, valleys, mountains, large waterbodies, coastlines, and more. In Section~\ref{sec:feature_engineering}, we talk about potential features to capture the local urban climate.
 
 \section{Smart Cities}
 
@@ -98,7 +98,7 @@ In the context of this work, we focus on \gls{ta} interpolation and have the mot
 \section{Interpolation}
 
 Interpolation is in essence to determine unknown data points based on a set of given data points~\cite{steffensen1927interpolation}. In this work, we focus on spatial interpolation which is the interpolation problem applied to spatial data given either as discrete data points or subareas, to determine a complete area. First, we categorize and introduce different spatial interpolation methods to get an understanding about what methods exist, which method is preferred in which application area based on the literature review by \textit{Lam} from 1983~\cite{lam1983spatial}, and augment certain areas with the current state of research. In recent years, many more specialised interpolation methods have been developed for specific use cases, as interpolation is not only about randomly selecting values, but estimating data points based on assumptions about the relationship with the existing data points and the area to interpolate. Depending on the exact use-case, these assumptions could be about the distribution of the data, or as a specific example in the case of interpolating liquids, having constraints such as that method is volume-preserving.\\
-Generally, spatial interpolation methods can be categorised by many different factors. Lam differentiatedbetween point interpolation, which is either exact or approximate, and areal interpolation, which is either non-volume-preserving and the same as point-based interpolation, or volume-preserving. As in situ sensor readings are singular data points at discrete locations, we focus on point interpolation, but note here that such data points could also be mapped into a partial grid first to then use areal interpolation methods.
+Generally, spatial interpolation methods can be categorised by many different factors. \textit{Lam} differentiated between point interpolation, which is either exact or approximate, and areal interpolation, which is either non-volume-preserving and the same as point-based interpolation, or volume-preserving. As in situ sensor readings are singular data points at discrete locations, we focus on point interpolation, but note here that such data points could also be mapped into a partial grid first to then use areal interpolation methods.
 Point interpolation methods can either be exact, meaning that the original data points are preserved 1 to 1 in the interpolated area, or approximated, e.g., they are fitted to a function that does not necessarily pass through all original data points. The important methods are as follows:
 
 \begin{itemize}
@@ -139,10 +139,10 @@ Due to its popularity, we discuss Kriging methods in more detail. Kriging method
     \item Indicator Kriging: same as Ordinary Kriging but for categorical data.
     \item Probability Kriging: same as Indicator Kriging but assumes two types of random errors that can are each auto-correlated and cross-correlated to each other.
     \item Disjunctive Kriging: same as Ordinary Kriging but tries to improve the prediction quality by using an unknown constant and approximating an arbitrary function. It requires the bivariate normality assumption and is difficult to verify and solutions might be mathematically and computationally complicated.
-    \item Cokriging: offers methods for the previous Kriging methods, but uses information on several variable types. This could improve the prediction quality, but might increase the variance of the prediction, as more much more estimation is required.
+    \item Cokriging: offers methods for the previous Kriging methods but uses information on several variable types. This could improve the prediction quality, but might increase the variance of the prediction, as more much more estimation is required.
 \end{enumerate}
 
-In the context of geostatistical analysis, there are different types of Kriging methods available that combine the aforementioned methods with other techniques, such as regression analysis. The following list is the geostaticial methods offered by ArcGIS Pro as part of the Geostatistical Analyst toolbox~\footnote{\url{https://pro.arcgis.com/en/pro-app/latest/tool-reference/geostatistical-analyst/an-overview-of-the-geostatistical-analyst-toolbox.htm}, \textit{last accessed: 24.08.2023}}:
+In the context of geostatistical analysis, there are different types of Kriging methods available that combine the aforementioned methods with other techniques, such as regression analysis. The following list is the geostatistical methods offered by ArcGIS Pro as part of the Geostatistical Analyst toolbox~\footnote{\url{https://pro.arcgis.com/en/pro-app/latest/tool-reference/geostatistical-analyst/an-overview-of-the-geostatistical-analyst-toolbox.htm}, \textit{last accessed: 24.08.2023}}:
 
 \begin{enumerate}
     \item Empirical Bayesian Kriging (EBK)
