--- a/chapter4.tex
+++ b/chapter4.tex
@@ -3,7 +3,7 @@
 
 In recent times, the area of machine learning has seen big advancements in terms of model size and complexity. Especially in the area of generative \gls{ai}, transformer-based neural networks have revolutionised text and image generation. Models such as OpenAI's \textit{ChatGPT}~\cite{openai2023gpt4} or Google's \textit{LaMDA}~\cite{thoppilan2022lamda} have generated significant hype for the possibility of use of \gls{ai}\@. Additionally, statements like the universal approximation theorem, which states that a feed-forward network with a single hidden layer containing a finite number of neurons can approximate any continuous function~\cite{hornik1989multilayer}, emphasize the potential power of \gls{ml} models. As a result, the question arises what benefits \gls{ai} can bring to other areas of application, such as interpolation.\\
 In this chapter, we will discuss the usage of \gls{ml} in the context of data enrichment via interpolation, more precisely in the context of Smart Cities and urban \gls{ta} interpolation. The \gls{ml} models will be compared in Section~\ref{chap:Evaluation} to traditional proven geostatistical model, e.g., Kriging, to outline and discover possible advantages and disadvantages. In general, the idea is to trade the explain- and interpretability of purely statistical-based approaches for model capabilities and accuracy, and the ability to capture more complex (non-linear) dependencies.
-Due to the great flexibility of \gls{ml} models, each model can be fit to completely different use-cases, such as interpolation vs.\ extrapolation or areal interpolation vs.\ interpolation of a single location. The following sections introduce different \gls{ml} models and discussed their applicability to the use-case of urban \gls{ta} interpolation.
+Due to the great flexibility of \gls{ml} models, each model can be fit to completely different use cases, such as interpolation vs.\ extrapolation or areal interpolation vs.\ interpolation of a single location. The following sections introduce different \gls{ml} models and discussed their applicability to the use-case of urban \gls{ta} interpolation.
 
 \subsubsection{AI vs. Machine Learning vs. Deep Learning}
 
@@ -18,7 +18,7 @@ As meteorological research and analysis activities are usually in need of gridde
     \item \gls{ml}-based interpolation for a single location to interpolate timeframes with missing data or to simulate a higher temporal resolution that does not only interpolate between individual data points of the same sensor, but also takes into consideration surrounding sensors
 \end{itemize}
 
-Research suggests that for fine-granular spatio-temporal urban \gls{ta} maps, a sensor density of at least 1 sensor per km$^{2}$ is needed~\cite{venter2020hyperlocal}, however the denser the sensor network the better the prediction quality, as even inside a single street canyon \gls{ta}s can easily vary by 2 to 3°C~\cite{sugawara2008temperature}.
+Research suggests that for fine-granular spatio-temporal urban \gls{ta} maps, a sensor density of at least 1 sensor per km$^{2}$ is needed~\cite{venter2020hyperlocal}, however the denser the sensor network the better the prediction quality, as even inside a single street canyon \gls{ta} can easily vary by 2 to 3°C~\cite{sugawara2008temperature}.
 To achieve this sensor density as well as to gain insights into previously unobserved areas and to minimise prediction uncertainty for those areas, hybrid approaches combining stationary and moving sensors have shown to work better than purely stationary networks by covering more ground as well as reducing variability of purely mobile network setups in the context of urban temperature sensing~\cite{yang2019designing}. The combination of reference grade stationary sensors and moving sensors also shows promise in other related application, e.g., in the context of pollution island detection~\cite{iyer2022modeling}.\\
 In the context of this work, we discuss both \gls{ml} applications and try to show the feasibility and potentials of \gls{ml}-based interpolation in the context of urban \gls{ta} sensing.
 In the following, we introduce several \gls{ml} algorithms that can be used for regression tasks and discuss how they need to be adapted to solve interpolation tasks as well as the advantages and disadvantages of each model. The models will be implemented as prototypes and evaluated in Chapter~\ref{chap:Evaluation}.
@@ -47,7 +47,7 @@ Next to the adaptations that need to be made to fit regression algorithms to the
     \item \textbf{Handling of Sparse Data:} Like missing data, handling of sparse data is also important to prevent problems such as the \gls{nan} problem mentioned previously. The main difference to missing data is that sparse data is not missing, but rather not always available. In our context, moving sensors would be an example for sparse data, as they only sense data at certain times and locations. The strategies to handle missing data are also similar to those of missing data, but imputation and interpolation are more common strategies to handle sparse data.
     \item \textbf{Model Performance:} The more complex a model is, the more training data is needed to fine-tune all its weights and the longer it takes to train, either due to the amount of data or the number of steps that need to be taken when updating weights in the training process. In the context of open-source and citizen participation less complex models are preferred, as they can be trained and deployed with less resources. However, a less complex model could have the downside of not being able to fit the underlying data as well as a more complex model, therefore there is a trade-off between model complexity and model performance. Another factor is the capability of handling many locations and data points, as some models' performance degrades significantly when the amount of data points increases, as well as the ability to handle high-dimensional data.
     \item \textbf{Model Capabilities vs. Interpretability:} A common trade-off in \gls{ml} models is between model capabilities and complexity and interpretability of the model as done by~\cite{zumwald2021mapping}, as `Neural network and deep learning approaches allow for large flexibility and predictive power but are harder to interpret than ensemble-based approaches which allow for the required flexibility, while still providing insights into the algorithms' inner workings, e.g., via variable importance and prediction uncertainty estimation'.
-    \item \textbf{Other:} Next to these main requirements, there are also other requirements, such as the ability the handle massive amounts of data, live retraining, or sophisticated support via \gls{ml} libraries such as \textit{Tensor Flow}~\footnote{\url{https://www.tensorflow.org/}} for commercial use-cases. Due to the limited scope of this work, these requirements will be considered in less detail.
+    \item \textbf{Other:} Next to these main requirements, there are also other requirements, such as the ability the handle massive amounts of data, live retraining, or sophisticated support via \gls{ml} libraries such as \textit{Tensor Flow}~\footnote{\url{https://www.tensorflow.org/}} for commercial use cases. Due to the limited scope of this work, these requirements will be considered in less detail.
 \end{itemize}
 
 After introducing the requirements for model adaptions and selection, the next step is to introduce and compare the different \gls{ml} regression algorithms.
@@ -73,7 +73,7 @@ Based on the domain, there already exist proposed best practices for which algor
 \subsection{(Multi) Linear Regression}
 \label{subsec: linear regression}
 
-Linear regression~\cite{montgomery2021introduction} is a comparatively simple, yet very powerful and widely used model for regression problems. The goal of this model is to predict a continuous dependent variable based on a number of independent variables. These independent variables can be either continuous or discrete. The model can be expressed as follows:
+Linear regression~\cite{montgomery2021introduction} is a comparatively simple, yet very powerful and widely used model for regression problems. The goal of this model is to predict a continuous dependent variable based on several independent variables. These independent variables can be either continuous or discrete. The model can be expressed as follows:
 
 \begin{equation}
     y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + ... + \beta_n x_n + \epsilon
@@ -96,10 +96,10 @@ where $\hat{y}$ is the predicted target variable, $k$ is the number of nearest n
 
 \subsection{Regression Trees and Random Forests}
 
-Tree predictors are used for a wide variety of classification and regression problems. Due to the fact that tree predictors are unstable, e.g., vary significantly given similar inputs, and tend to overfit, random forests were introduced as a counter measure. \gls{rf}s combine multiple tree predictors and train them on different features and subsets of data and either average their predictions to reduce the variance or use boosting methods to reduce the bias of a combined estimator~\cite{breiman2001random}.\\
+Tree predictors are used for a wide variety of classification and regression problems. Since tree predictors are unstable, e.g., vary significantly given similar inputs, and tend to overfit, random forests were introduced as a counter measure. \gls{rf}s combine multiple tree predictors and train them on different features and subsets of data and either average their predictions to reduce the variance or use boosting methods to reduce the bias of a combined estimator~\cite{breiman2001random}.\\
 In the case of predicting a continuous target variable, regression trees can be used. The principle behind regression trees is to split the data into continuously smaller sub-sets and organise the splitting points in a way that minimises the error. Compared to decision trees which try to minimise the entropy, regression trees try to minimise an error that is compatible with a continuous target variable such as \gls{mse}.\\
 Regression trees are comparatively easy to understand and interpret and offer certain benefits such as feature insensitivity, meaning that features do not need to be scaled before usage and can be used as is. In~\cite{zumwald2021mapping} Zumwald et al.\ choose to use \gls{qrf}~\cite{meinshausen2006quantile} for mapping hyperlocal \gls{ta} in Zurich, Switzerland, due to the flexibility and predictive power of ensemble-based approaches and the ability to still gain additional insights into the algorithms' inner workings via variable importance and prediction uncertainty estimation. They note however that \gls{ann} and \gls{dl} approaches allow for even larger flexibility and predictive power but lack behind in other areas such as the aforementioned interpretability. In the following we get an overview of \gls{rmse} and \gls{r2} values achieved by related studies.\\
-Ho et al.~\cite{ho2014mapping} mapped maximum daily \gls{ta}s for Vancouver, Canada on hot summer days and combined remote sensing TM/ETM data from Landsat with field observations from Environment Canada and \gls{wow}. They compared Ordinary least squares regression, \gls{svm} regression, and \gls{rf} Regression and achieved the following \gls{rmse}:
+Ho et al.~\cite{ho2014mapping} mapped maximum daily \gls{ta} for Vancouver, Canada on hot summer days and combined remote sensing TM/ETM data from Landsat with field observations from Environment Canada and \gls{wow}. They compared Ordinary least squares regression, \gls{svm} regression, and \gls{rf} Regression and achieved the following \gls{rmse}:
 
 \begin{itemize}
     \item \gls{rf}:\ \gls{rmse} 2.31°C
