--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1,7 +1,7 @@
 \chapter{Evaluation}
 \label{chap:Evaluation}
 
-The goal of this chapter is to evaluate different use-cases for \gls{ml}-based interpolation in the context of \gls{ta} interpolation. In Chapter~\ref{chap:Machine Learning based Interpolation}, different models for \gls{ml}-based interpolation were already introduced. Afterwards, the available data and features were introduced in Chapter~\ref{chap:preparations data sets}. In this chapter, the different models are compared with different datasets and features to test the feasibility of two main use cases:
+The goal of this chapter is to evaluate different use cases for \gls{ml}-based interpolation in the context of \gls{ta} interpolation. In Chapter~\ref{chap:Machine Learning based Interpolation}, different models for \gls{ml}-based interpolation were already introduced. Afterwards, the available data and features were introduced in Chapter~\ref{chap:preparations data sets}. In this chapter, the different models are compared with different datasets and features to test the feasibility of two main use cases:
 
 \begin{enumerate}
   \item Interpolation of \gls{ta} for a specific location
@@ -24,7 +24,7 @@ All \gls{ml} models are implemented using Python and the scikit-learn library~\c
 To validate the different models, we use the following methodology:\\
 We evaluate two locations based on data availability, e.g., Hamburg and Stuttgart, that also have slightly different climate characteristics, although both are located in Germany in a moderate cool climatic zone, with Hamburg located near the coast in rather Maritim climate and Stuttgart located more inland in a continental climate. Hamburg has also higher precipitation and wind compared to Stuttgart.
 For both locations, we collected \gls{pws} data from Netatmo and Sensor.Community, however Netatmo data is only available for the whole month of June 2023 for Hamburg and for a single timestep on 19. June 2023 14h for Stuttgart, while Sensor.Community data is available for the whole months of January and June 2023 for both locations.\\
-For both locations for both interpolation use-cases, we first compare all available models, e.g., Linear Regression, \gls{knn}, \gls{rf}, \gls{svr}, and \gls{hgb}, with all features against each other to get an understanding of the overall performance of the models and maximum achievable potential, given the assumption that more features generally improve prediction quality. The datasets are split into a training and test set. 70\% of the data is used for training and 30\% is completely withhold for testing. The training and test set are split randomly. The same split is used for all models and sensors to ensure comparability.
+For both locations for both interpolation use cases, we first compare all available models, e.g., Linear Regression, \gls{knn}, \gls{rf}, \gls{svr}, and \gls{hgb}, with all features against each other to get an understanding of the overall performance of the models and maximum achievable potential, given the assumption that more features generally improve prediction quality. The datasets are split into a training and test set. 70\% of the data is used for training and 30\% is completely withhold for testing. The training and test set are split randomly. The same split is used for all models and sensors to ensure comparability.
 Afterwards, the most promising model with the lowest error is used to further evaluate specific influences such as distances between neighbours or the amount of training data and time intervals. For the further evaluation, 5-Fold Cross Validation is used to reduce the risk of overfitting~\cite{kohavi1995study}. We note here that a k of 10 would be preferred, however due to the computational overhead we only use a k of 5 for exploration.\\
 All \gls{ml} models in the initial evaluation are trained using the default parameters as defined in the scikit-learn library. The only exception is the number of estimators for the \gls{rf} Regressor and the number of iterations for the \gls{hgb} Regressor, which are both increased from 100 to 200 to improve the performance of the models as found out by previous exploration. To get the best possible performance of each model, an exhaustive grid search would be preferred for all models to fine-tune all hyperparameters; however, due to the computational overhead of running exhaustive grid searches, this is not feasible in the scope of this work.\\
 For the error metrics, the following candidates are available: \gls{mse}, MAE, \gls{rmse}, \gls{r2}. \gls{mse} is the most used error metric and is more sensitive to outliers, whereas MAE punishes outliers less but is therefore also more variable. Related work commonly uses \gls{rmse} as it has the same unit as the response variable, therefore \gls{rmse} is used as the main error metric. \gls{r2} is additionally used to get an understanding of the variance of the model.
@@ -35,7 +35,7 @@ The first use-case to be evaluated is the interpolation of \gls{ta} for a specif
 
 \begin{enumerate}
   \item Create datasets for training and testing based on the datasets for June 2023 after \gls{qc} for Hamburg and Stuttgart
-  \item Data pre-processing for the specific models. Only \gls{hgb} supports missing values, therefore we need to fill in missing values for all other models using an imputer. We use a simple mean imputer for this purpose, that fills missing values with the mean value for each row, i.e., each timestamp, not column. All input data is normalized using a standard scaler as some models such as \gls{knn} need normalized data, which should not have any impact on models that don't need normilization of input features such as \gls{rf} and Gradient Boosting. This pre-processing step could be further improved by using different means of imputation or using different scalers.
+  \item Data pre-processing for the specific models. Only \gls{hgb} supports missing values, therefore we need to fill in missing values for all other models using an imputer. We use a simple mean imputer for this purpose, that fills missing values with the mean value for each row, i.e., each timestamp, not column. All input data is normalized using a standard scaler as some models such as \gls{knn} need normalized data, which should not have any impact on models that don't need normalization of input features such as \gls{rf} and Gradient Boosting. This pre-processing step could be further improved by using different means of imputation or using different scalers.
   \item Fit each model using the datasets and evaluate the performance using all available features for all locations to get an overview of the performance of each model. The dataset is split 70\% for training and 30\% for testing, but no k-Fold Cross Validation is used due to the computational overhead for the initial comparison across all sensor locations.
   \item Choose the most promising model and further evaluate the influence of different features, e.g., distances between neighbours, the amount of training data, and time intervals. This step only selects a subset of stations of particular interest, e.g., in the city centre or near water and adds 5-Fold Cross Validation for further trust in the results.
 \end{enumerate}
@@ -76,7 +76,7 @@ The evaluation is done using 5-fold cross validation for a subset of 10 stations
 
 \subsubsection{Feature Importance}
 
-Next to the temperature, there are also other features that could be included in the prediction process such as the time, humidity, pressure, etc. In order to understand how much the features contribute to the overall prediction quality, we first compare the \gls{rmse} of the model with only the temperature as input feature for each neighbour, and then test with adding time, humidity, pressure, and finally all features combined. Time is only a single column of the transformed timestamp, whereas humidity and pressure are added for each neighbour. In the end the input looks as follows: [ta\_1... ta\_n, time, humidity\_1... humidity\_n, pressure\_1... pressure\_n]\\
+Next to the temperature, there are also other features that could be included in the prediction process such as the time, humidity, pressure, etc. In order to understand how much the features contribute to the overall prediction quality, we first compare the \gls{rmse} of the model with only the temperature as input feature for each neighbour, and then test with adding time, humidity, pressure, and finally all features combined. Time is only a single column of the transformed timestamp, whereas humidity and pressure are added for each neighbour. In the end the input looks as follows: [ta$_1$... ta$_n$, time, humidity$_1$... humidity$_n$, pressure$_1$... pressure$_n$]\\
 Figure~\ref{fig:eval feature importance 10 stations single location} shows the \gls{rmse} for different features for 10 stations in Hamburg with 30 neighbours. We can clearly see, that there is no visible difference between only temperature and all features combined, therefore in Figure~\ref{fig:eval permutation importance single station} we take a look at the permutation importance of a single station for temperature and time on a 30\% test set. The values are calculated based on the trained regressors from the 5 different folds of the cross validation, however the test set was always the same and not the same used during the cross-validation, due to technical limitations in the sklearn library. However, the results indicates that only a very small number of stations, in this case the neighbours 4 and 13, have a high influence on the prediction quality. All other stations have a very low influence on the prediction quality, with time having no visible influence at all. This is a very interesting result, as it indicates that the model only needs a handful of neighbours that have similar temperature distributions to the target station in order to make a good prediction. Other features such as time, humidity and pressure do not seem to have any influence on the prediction quality, and could therefore be ignored, saving computational resources and making the model more robust. This assumption could be further validated by looking at more stations and their permutation importance.\\ 
 
 \begin{figure}[htp]
@@ -142,7 +142,7 @@ We can see, that a low number of moving sensors, especially with high number of 
 \section{Areal Interpolation of Air Temperature}
 
 The second use-case for \gls{ml}-based interpolation of \gls{ta} is the areal interpolation, e.g., turning a set of single data points into a continuous temperature layer/grid. The problem with this approach is that in comparison to interpolating a single sensor, there are potentially many locations that have no sensor data and therefore no target variable to be trained with. The main assumption here is that locations with similar features, e.g., land coverage, soil temperature, \gls{svf}, solar radiance, etc.\ have similar \gls{ta}. This assumption is one of the motivating factors behind \gls{lcz} research. The main challenge here is to find the right features that capture the dependency between the different locations and choose how to model spatial information.\\
-In the following section, areal interpolation of \gls{ta} is explored by comparing the \gls{rmse} between different models, previously discussed in Chapter~\ref{chap:Machine Learning based Interpolation}. We primarily focus on the area of Stuttgart, as Sensor.Community data for this area was much easier to acquire, as seen in Figure~\ref{fig:qc sensor community stuttgart june 23}. We focus again on the month of June 2023, as it contained a lot of periods of prolonged hot weather, as seen in the Appendix Figure~\ref{fig:dwd stuttgart june 23 mean min max}, and we are interested in mapping \gls{ta} especially during hot periods. Similar to Kriging, in our areal interpolation exploration, we focus on the interpolation of \gls{ta} for a single timestamp. Our approach could be extended in the future, to also include a temporal aspect as well; however, this is out of the scope of this work. Based on the \gls{dwd} reference station, we chose the 19.06.2023 as our reference data to try out several types of areal interpolation. To get a good understanding, what kind of \gls{ta}s to expect that day, we also took a look at the 2m and 5cm \gls{ta} at the \gls{dwd} station on the 19.06.2023, as seen in Appendix Figure~\ref{fig:dwd stuttgart june 23 10 min 2m 5cm}. Interest to note here, is that the 5cm \gls{ta} fluctuates way more than the \gls{ta} at 2m, indicating that height information of a sensor place an important role, especially in areal interpolation where you cannot only rely on the relationship between neighbouring temperature curves but need to capture placement information as well.\\
+In the following section, areal interpolation of \gls{ta} is explored by comparing the \gls{rmse} between different models, previously discussed in Chapter~\ref{chap:Machine Learning based Interpolation}. We primarily focus on the area of Stuttgart, as Sensor.Community data for this area was much easier to acquire, as seen in Figure~\ref{fig:qc sensor community stuttgart june 23}. We focus again on the month of June 2023, as it contained a lot of periods of prolonged hot weather, as seen in the Appendix Figure~\ref{fig:dwd stuttgart june 23 mean min max}, and we are interested in mapping \gls{ta} especially during hot periods. Similar to Kriging, in our areal interpolation exploration, we focus on the interpolation of \gls{ta} for a single timestamp. Our approach could be extended in the future, to also include a temporal aspect as well; however, this is out of the scope of this work. Based on the \gls{dwd} reference station, we chose the 19.06.2023 as our reference data to try out several types of areal interpolation. To get a good understanding, what kind of \gls{ta} to expect that day, we also took a look at the 2m and 5cm \gls{ta} at the \gls{dwd} station on the 19.06.2023, as seen in Appendix Figure~\ref{fig:dwd stuttgart june 23 10 min 2m 5cm}. Interest to note here, is that the 5cm \gls{ta} fluctuates way more than the \gls{ta} at 2m, indicating that height information of a sensor place an important role, especially in areal interpolation where you cannot only rely on the relationship between neighbouring temperature curves but need to capture placement information as well.\\
 
 \subsection{Model Comparison}
 
@@ -173,7 +173,7 @@ Each model, i.e., Linear Regression, \gls{knn}, \gls{rf}, \gls{hgb}, \gls{svm}, 
 \subsection{Comparison with Kriging}
 
 In order to evaluate the performance of the \gls{ml} model, we need to first get a better understanding of the interpolation quality of existing interpolation techniques. Next to simpler deterministic interpolation methods, such as \gls{idw} that are simple but performant, yet struggle to capture more complex interdependencies, there are also more complex methods available. The most common geostatistical method for interpolation is Kriging.\\
-In the scope of this work, we unfortunately cannot compare available Kriging methods with each other and therefore need to focus on a subset of methods, namely those easily available via the pykrige Python library, i.e., Ordinary and Universal Kriging. We note however, that for example according to~\cite{njoku2023effects}, there are many other more sophisticated and specicialised Kriging methods such as EBK and EBKRP that could perform better. For \gls{ok}, we use the same dataset we used previously but only use the coordinates and the target \gls{ta}. With a 80\% train and 20\% test split, we achieved the following \gls{rmse} and \gls{r2} scores in Table~\ref{tab: areal interpolation ok 2pm}. If we choose the same data and train and test our \gls{ml} models on it, we get the \gls{rmse} and \gls{r2} shown in Table~\ref{tab: areal interpolation ml models 2pm}.\\
+In the scope of this work, we unfortunately cannot compare available Kriging methods with each other and therefore need to focus on a subset of methods, namely those easily available via the pykrige Python library, i.e., Ordinary and Universal Kriging. We note however, that for example according to~\cite{njoku2023effects}, there are many other more sophisticated and specialised Kriging methods such as EBK and EBKRP that could perform better. For \gls{ok}, we use the same dataset we used previously but only use the coordinates and the target \gls{ta}. With a 80\% train and 20\% test split, we achieved the following \gls{rmse} and \gls{r2} scores in Table~\ref{tab: areal interpolation ok 2pm}. If we choose the same data and train and test our \gls{ml} models on it, we get the \gls{rmse} and \gls{r2} shown in Table~\ref{tab: areal interpolation ml models 2pm}.\\
 
 \begin{table}[ht]
   \centering
@@ -205,7 +205,7 @@ In the scope of this work, we unfortunately cannot compare available Kriging met
   \caption{\gls{rmse} and \gls{r2} of \gls{ml} Models for Stuttgart 19.06.2023 2PM, Sensor.Community}
 \end{table}
 
-From these results we can see, that our \gls{ml} models outperform \gls{ok} in terms of \gls{rmse} but lack behind in \gls{r2} score. To show the differences, we use both Kriging and \gls{hgb} to interpolate a map. The results of the best performing model according to \gls{r2} scoore, i.e., the spherical variogram, can be seen in Figure~\ref{fig:eval areal interpolation ok 14h stuttgart}. The \gls{hgb} results can be seen in Figure~\ref{fig:eval areal interpolation hgb 14h stuttgart}.\\
+From these results we can see, that our \gls{ml} models outperform \gls{ok} in terms of \gls{rmse} but lack behind in \gls{r2} score. To show the differences, we use both Kriging and \gls{hgb} to interpolate a map. The results of the best performing model according to \gls{r2} score, i.e., the spherical variogram, can be seen in Figure~\ref{fig:eval areal interpolation ok 14h stuttgart}. The \gls{hgb} results can be seen in Figure~\ref{fig:eval areal interpolation hgb 14h stuttgart}.\\
 
 \begin{figure}[htp]
     \centering
