--- a/appendix_general.tex
+++ b/appendix_general.tex
@@ -48,7 +48,7 @@ early_stopping='auto', scoring='loss', validation_fraction=0.1,
 n_iter_no_change=10, tol=1e-07, verbose=0, random_state=42)
 \end{lstlisting}
 
-The number of max iterations was increased from the default value of 100 to 200 to improve the performance of the model and the random state was set to 42 so all interations yield the same result.
+The number of max iterations was increased from the default value of 100 to 200 to improve the performance of the model and the random state was set to 42 so all iterations yield the same result.
 
 \section{Feature Engineering}
 
@@ -93,7 +93,7 @@ The locations of the stations are presented in Figure~\ref{fig:eval_hamburg_loca
 \section{Areal Interpolation}
 
 Figure~\ref{fig:dwd stuttgart june 23 mean min max} shows the mean/max/min \gls{ta} for \gls{dwd} station with id 4931 across June 2023 in Stuttgart near the airport.
-Figure~\ref{fig:dwd stuttgart june 23 10 min 2m 5cm} shows the \gls{ta} for the same station on the 19. June 2023 in a 10 minute interval. The blue line, i.e., TT\_10, shows the \gls{ta} at 2m while the orange line, i.e., TM5\_10, shows the \gls{ta} at 5cm directly above the ground.
+Figure~\ref{fig:dwd stuttgart june 23 10 min 2m 5cm} shows the \gls{ta} for the same station on the 19. June 2023 in a 10-minute interval. The blue line, i.e., TT\_10, shows the \gls{ta} at 2m while the orange line, i.e., TM5\_10, shows the \gls{ta} at 5cm directly above the ground.
 
 \begin{figure}[ht]
     \centering
